# socket-playground

./: .clang-format  .gitignore  CMakeLists.txt  README.md
scripts/: client.sh  debug.sh  run.sh
src/: client.cpp  client.h  common.cpp  common.h  main.cpp  server.cpp  tcp_chat.cpp
tcp-chat/: CMakeLists.txt  (+1 more)
udp-rect-keys/: CMakeLists.txt  README.md
udp-rect-keys/lib/: .gitignore  CMakeLists.txt
udp-rect-keys/lib/libnet/: CMakeLists.txt  client.cpp  client.h  command_handler.h  common.h  event.cpp  event.h  packet_factory.cpp  packet_factory.h  server.cpp  server.h  test.cpp  test.h
udp-rect-keys/scripts/: build2.sh  client.sh  getsabre.sh
udp-rect-keys/src/: CMakeLists.txt  main.cpp
udp-rect-keys/src/client/: CMakeLists.txt  application.cpp  application.h  client_manager.cpp  client_manager.h
udp-rect-keys/src/client/input/: keyboard.cpp  keyboard.h
udp-rect-keys/src/common/: CMakeLists.txt  alias.h  command_handler.cpp  command_handler.h  commands.cpp  commands.h  common.h  constants.h  net_helper.cpp  net_helper.h
udp-rect-keys/src/common/net/: client.h  command_handler.cpp  command_handler.h  server.cpp  server.h
udp-rect-keys/src/lib/: CMakeLists.txt
udp-rect-keys/src/lib/net/: CMakeLists.txt  client.cpp  client.h  command_handler.cpp  command_handler.h  commands.h  common.h  server.cpp  server.h
udp-rect-keys/src/net/: CMakeLists.txt  client.h  client_manager.cpp  client_manager.h  command_handler.cpp  command_handler.h  commands.cpp  commands.h  common.h  server.cpp
udp-rect-keys/src/server/: CMakeLists.txt  server.cpp  server.h
(+16 files in other folders)
